[package]
name = "rusty-jenkins"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rj"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
